# RIA-ODO-ROBOT-PC

gaitech_r100/launch/: riaodo_driver.launch
gaitech_r100/params/: r100_kinco.config
gaitech_sensors/urdf/: all_sensors.urdf.xacro  ptz_camera.urdf.xacro
riaodo_bringup/: CMakeLists.txt  package.xml
riaodo_bringup/config/: standalone.yaml  twist_mux.yaml
riaodo_bringup/include/: external_vel_smoother.launch.xml  robot_localization.launch.xml  teleop_vel_smoother.launch.xml
riaodo_bringup/launch/: riaodo_bringup.launch
riaodo_bringup/scrips/: disable_auto_bringup.sh  enable_auto_bringup.sh
riaodo_debs/: ros-melodic-ptz-camera-msgs_0.1.0-0bionic_amd64.deb  ros-melodic-riaodo-teleop_0.2.0-0bionic_amd64.deb
riaodo_description/: CMakeLists.txt  package.xml
riaodo_description/launch/: riaodo_description.launch  riaodo_description_static.launch
riaodo_description/meshes/: balance_link.stl  top_plate.stl  wheel_support_left.stl  wheel_support_right.stl
riaodo_description/urdf/: materials.urdf.xacro  property.urdf.xacro  ria_odo.urdf.xacro  ria_odo_static.urdf.xacro  wheel_supports.urdf.xacro  wheel_supports_static.urdf.xacro  wheels.urdf.xacro  wheels_static.urdf.xacro
riaodo_imu/: CMakeLists.txt  LICENSE  package.xml
riaodo_imu/config/: RIA_ODO_IMU_RIGHT_PARAM_latest.params
riaodo_imu/include/riaodo_imu/: set_rate.h
riaodo_imu/launch/: riaodo_imu.launch
riaodo_imu/src/: riaodo_imu_node.cpp  set_rate.cpp
